# 3dcode_toolkit

./: .gitignore  CLAUDE.md  README.md  config.toml.example  pyproject.toml
curation_tools/articraft/: README.md  articraft_cq.py  assemble_shim.py  batch_verify.py  blender_glb.py  blender_urdf.py  caption_cadquery.py  caption_urdf.py  cq_to_glb.py  driver_urdf_render.py  exec_validate.py  gen_code.py  geom_chamfer.py  integrate_recovered.py  regen_glb.py  render_glb_only.py  upload_articraft.py  verify_cadquery.py
curation_tools/articraft/shim_parts/: brackets_hinges_bezels.py  fans.py  gears.py  knobs.py  lathe_extrude_loft.py  panels_vents.py  primitives.py  section_loft.py  sweeps.py  wheels_tires.py
curation_tools/deepcad/: README.md  assemble_corpus.py  attach_text.py  batch_convert.py  convert_vec_to_cq.py  cq_check.py  cq_check_batch.py  dedup_check.py  dedup_fast.py  dedup_vec.py  finalize.py  gen_gt_stl.py  iou_compute.py  mark_dedup.py  pack_tar_parquet.py  render_all.py  to_3dcodeverse.py  upload_to_hf.py  validate_all.py  validate_fast.py  viz_compare.py
docs/: contributing.md
threedcode/: __init__.py  cli.py  config.py  grid.py  hashing.py  registry.py  schema.py  storage.py
threedcode/dialects/: __init__.py  blender_python.py  build123d_dialect.py  cadquery_dialect.py  freecad_dialect.py  openscad_dialect.py
threedcode/runners/: blender_exec.py  blender_render.py  blender_render_mesh.py  freecad_exec.py
