[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3dcode"
version = "0.1.0"
description = "3DCodeVerse data toolkit — validate, dedup, and upload (code -> 3D) projects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "boto3>=1.34",
  "typer>=0.12",
  "tomli>=2.0 ; python_version < '3.11'",
]

# Heavier, optional: geometry + perceptual hashing for dedup. Base install stays light.
[project.optional-dependencies]
dedup = ["trimesh>=4.0", "imagehash>=4.3", "Pillow>=10.0", "numpy>=1.24"]

[project.scripts]
"3dcode" = "threedcode.cli:app"

[tool.setuptools]
packages = ["threedcode"]
